# sdmm

./: .gitlab-ci.yml  Cargo.toml  README.md  justfile
.cargo/: config.toml
res/css/: tailwind_output.min.css
res/html/: civitai.html  index.html
res/html/partial/: search.html
src/: api.rs  ui.rs
src/api/: item.rs
src/db/: item.rs
